testsuite/tests/typecheck/should_fail/T7809.stderr

T7809.hs:8:8: error:
    • Illegal polymorphic type: forall a. a -> a
    • In the expansion of type synonym ‘PolyId’
      In the type signature: foo :: F PolyId
    Suggested fix: Perhaps you intended to use ImpredicativeTypes
